--- a/examples/index.html
+++ b/examples/index.html
@@ -2,16 +2,15 @@
 <body>
 	<script src="../easyworker-page.js"></script>
 	<script>
-	var worker	= EasyWorker.create({
-		exports	: {
-			add	: function(a, b, callback){
-				callback(null, a + b);
-			},
-			sub	: function(a, b, callback){
-				callback(null, a - b);
-			}
-		}
+	EasyWorker.urlWorkerJs	= '../easyworker-worker.js'
+	var worker	= EasyWorker.create();
+	worker.define('add', function(a, b, callback){
+		callback(null, a + b);
 	});
+	worker.define('sub', function(a, b, callback){
+		callback(null, a - b);
+	});
+
 	worker.add(1, 2, function(err, res){
 		console.log("add(1,2)=", res, '/', err);		
 	});
