cleanup + .run() implementation (fix #2)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 		// create a worker instance
 		var worker	= new EasyWorker.Instance();
 	
+		// use .run() to init the thread
+		worker.run(function(){
+			// here you put the code to init
+			// typically init stuff
+			// importScripts('foo.js');
+		});
+	
 		// define two functions
 		worker.define('add', function(a, b, callback){
 			callback(null, a + b);
@@ -15,7 +22,7 @@
 		worker.define('sub', function(a, b, callback){
 			callback(null, a - b);
 		});
-	
+		
 		// call the add function with generic fasion
 		worker.call('add', [1, 2], function(err, res){
 			console.log("add(1,2)=", res, '/', err);		
